fix: discount gap

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ header .container {
     font-size: 10px;
     font-weight: bold;
     display: flex;
+    gap: 3px;
 }
 .discount .howmuch {
     background-color: red;
@@ -101,7 +102,6 @@ header .container {
 .discount .sustainability {
     background-color: green;
     padding: 3px 5px;
-    border-left: 2px solid;
 }
 .card .like {
     position: absolute;
